libweva/include/weva_c.h


typedef enum weva_status {
    WEVA_OK = 0,
    WEVA_ERR_INVALID_ARGUMENT = 1,
    WEVA_ERR_PARSE = 2,
    WEVA_ERR_NOT_FOUND = 3,
    WEVA_ERR_UNSUPPORTED = 4,
    WEVA_ERR_INTERNAL = 5,
    WEVA_ERR_INVALID_STATE = 6
} weva_status;
typedef struct weva_document* weva_document_t;
typedef uint32_t weva_element_t;
size_t weva_document_selected_text(weva_document_t doc, char* buffer, size_t capacity);
weva_status weva_element_selection(weva_document_t doc, weva_element_t element, int* out_start,
                                   int* out_end);
weva_status weva_element_set_selection(weva_document_t doc, weva_element_t element, int start,
                                       int end);
weva_status weva_element_set_selection_without_focus(weva_document_t doc,
    weva_element_t element, int start, int end);
typedef struct weva_binding_source {
    void* user;
    size_t (*value)(void* user, const char* path, char* buffer, size_t capacity, int* found);
    int (*count)(void* user, const char* path);
} weva_binding_source;
void weva_document_set_binding_source(weva_document_t doc, const weva_binding_source* source);
int weva_document_refresh_bindings(weva_document_t doc);
weva_status weva_element_set_html(weva_document_t doc, weva_element_t element, const char* html,
                                  size_t length);
weva_element_t weva_element_append_html(weva_document_t doc, weva_element_t element,
                                        const char* html, size_t length);
weva_status weva_element_remove(weva_document_t doc, weva_element_t element);
size_t weva_document_query_all(weva_document_t doc, const char* selector, weva_element_t* out,
                               size_t capacity);
int weva_document_scroll(weva_document_t doc, double x, double y, double dx, double dy);
weva_status weva_element_set_scroll(weva_document_t doc, weva_element_t element, double x,
                                    double y);
weva_status weva_element_scroll(weva_document_t doc, weva_element_t element, double* out_x,
                                double* out_y, double* out_max_x, double* out_max_y);
weva_status weva_element_scroll_into_view(weva_document_t doc, weva_element_t element);
weva_status weva_element_set_style(weva_document_t doc, weva_element_t element,
                                   const char* property, const char* value);
size_t weva_element_style(weva_document_t doc, weva_element_t element, const char* property,
                          char* buffer, size_t capacity);
weva_status weva_element_set_attribute(weva_document_t doc, weva_element_t element,
                                       const char* name, const char* value);
size_t weva_element_value(weva_document_t doc, weva_element_t element, char* buffer,
                          size_t capacity);
uint64_t weva_element_form_version(weva_document_t doc, weva_element_t element);
weva_status weva_element_set_value(weva_document_t doc, weva_element_t element,
                                   const char* value);
weva_status weva_document_reset_form(weva_document_t doc, weva_element_t form);
weva_element_t weva_element_form(weva_document_t doc, weva_element_t element);
weva_status weva_element_set_text(weva_document_t doc, weva_element_t element, const char* text);
size_t weva_element_attribute(weva_document_t doc, weva_element_t element, const char* name,
                              char* buffer, size_t capacity);
size_t weva_element_tag_name(weva_document_t doc, weva_element_t element, char* buffer, size_t capacity);
weva_status weva_element_show_dialog(weva_document_t doc, weva_element_t element, int modal);
weva_status weva_element_close_dialog(weva_document_t doc, weva_element_t element);
weva_status weva_element_request_close_dialog(weva_document_t doc, weva_element_t element);
int weva_document_prevent_default(weva_document_t doc);
weva_status weva_element_set_custom_validity(weva_document_t doc, weva_element_t element, const char* message);
size_t weva_element_custom_validity(weva_document_t doc, weva_element_t element, char* buffer, size_t capacity);
weva_status weva_element_validity(weva_document_t doc, weva_element_t element,
                                  uint32_t* errors, int* will_validate);
weva_status weva_element_check_validity(weva_document_t doc, weva_element_t element, int* valid);
weva_status weva_element_report_validity(weva_document_t doc, weva_element_t element, int* valid);
size_t weva_element_dialog_return_value(weva_document_t doc, weva_element_t element,
                                      char* buffer, size_t capacity);
weva_status weva_element_set_dialog_return_value(weva_document_t doc, weva_element_t element,
                                                const char* value);
weva_status weva_element_close_dialog_with_value(weva_document_t doc, weva_element_t element,
                                                const char* value);
weva_status weva_element_request_close_dialog_with_value(weva_document_t doc, weva_element_t element,
                                                        const char* value);
void weva_document_set_popover_request_events(weva_document_t doc, int enabled);
weva_status weva_element_request_show_popover(weva_document_t doc, weva_element_t element);
weva_status weva_element_request_hide_popover(weva_document_t doc, weva_element_t element);
weva_status weva_element_request_toggle_popover(weva_document_t doc, weva_element_t element);
weva_status weva_element_show_popover(weva_document_t doc, weva_element_t element);
weva_status weva_element_hide_popover(weva_document_t doc, weva_element_t element);
weva_status weva_element_toggle_popover(weva_document_t doc, weva_element_t element);
weva_status weva_document_set_base_path(weva_document_t doc, const char* path);
size_t weva_document_missing_assets(weva_document_t doc, char* buffer, size_t capacity);
size_t weva_document_css_diagnostics(weva_document_t doc, char* buffer, size_t capacity);
size_t weva_document_html_diagnostics(weva_document_t doc, char* buffer, size_t capacity);
typedef struct weva_element_change {
    weva_element_t element;
    int32_t kind;   
} weva_element_change;
size_t weva_document_changed_elements(weva_document_t doc, weva_element_change* out, size_t capacity);
uint64_t weva_document_structure_version(weva_document_t doc);
size_t weva_document_font_faces(weva_document_t doc, char* buffer, size_t capacity);
size_t weva_document_layout_dump(weva_document_t doc, const char* source, char* buffer,
                                 size_t capacity);
weva_element_t weva_element_parent(weva_document_t doc, weva_element_t element);
size_t weva_element_children(weva_document_t doc, weva_element_t element, weva_element_t* out,
                             size_t capacity);
weva_status weva_element_box_model(weva_document_t doc, weva_element_t element, double* out);
size_t weva_element_matched_rules(weva_document_t doc, weva_element_t element, char* buffer,
                                  size_t capacity);
size_t weva_element_computed_style_all(weva_document_t doc, weva_element_t element, char* buffer,
                                       size_t capacity);
typedef size_t (*weva_asset_reader)(void* user_data, const char* path, uint8_t* buffer,
                                    size_t capacity);
weva_status weva_document_set_asset_reader(weva_document_t doc, weva_asset_reader reader,
                                           void* user_data);
size_t weva_element_computed_style(weva_document_t doc, weva_element_t element,
                                   const char* property, char* buffer, size_t capacity);
size_t weva_element_model_path(weva_document_t doc, weva_element_t element, const char* path,
                               char* buffer, size_t capacity);
int weva_element_row(weva_document_t doc, weva_element_t element, int* out_index, char* key_buffer,
                     size_t key_capacity);
int weva_element_has_attribute(weva_document_t doc, weva_element_t element, const char* name);
size_t weva_element_text(weva_document_t doc, weva_element_t element, char* buffer,
                         size_t capacity);