Packages/com.wevaui/Runtime/Native/WevaNative.g.cs

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_selected_text(System.IntPtr doc, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_selection(System.IntPtr doc, uint element, int* out_start, int* out_end);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_set_selection(System.IntPtr doc, uint element, int start, int end);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_set_selection_without_focus(System.IntPtr doc, uint element, int start, int end);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_binding_source(System.IntPtr doc, weva_binding_source* source);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_refresh_bindings(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_set_html(System.IntPtr doc, uint element, byte* html, nuint length);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_element_append_html(System.IntPtr doc, uint element, byte* html, nuint length);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_remove(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_query_all(System.IntPtr doc, byte* selector, uint* @out, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_scroll(System.IntPtr doc, double x, double y, double dx, double dy);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_set_scroll(System.IntPtr doc, uint element, double x, double y);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_scroll(System.IntPtr doc, uint element, double* out_x, double* out_y, double* out_max_x, double* out_max_y);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_scroll_into_view(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_set_style(System.IntPtr doc, uint element, byte* property, byte* value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_style(System.IntPtr doc, uint element, byte* property, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_set_attribute(System.IntPtr doc, uint element, byte* name, byte* value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_value(System.IntPtr doc, uint element, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong weva_element_form_version(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_set_value(System.IntPtr doc, uint element, byte* value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_reset_form(System.IntPtr doc, uint form);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_element_form(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_set_text(System.IntPtr doc, uint element, byte* text);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_attribute(System.IntPtr doc, uint element, byte* name, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_tag_name(System.IntPtr doc, uint element, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_show_dialog(System.IntPtr doc, uint element, int modal);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_close_dialog(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_request_close_dialog(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_prevent_default(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_set_custom_validity(System.IntPtr doc, uint element, byte* message);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_custom_validity(System.IntPtr doc, uint element, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_validity(System.IntPtr doc, uint element, uint* errors, int* will_validate);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_check_validity(System.IntPtr doc, uint element, int* valid);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_report_validity(System.IntPtr doc, uint element, int* valid);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_dialog_return_value(System.IntPtr doc, uint element, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_set_dialog_return_value(System.IntPtr doc, uint element, byte* value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_close_dialog_with_value(System.IntPtr doc, uint element, byte* value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_request_close_dialog_with_value(System.IntPtr doc, uint element, byte* value);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern void weva_document_set_popover_request_events(System.IntPtr doc, int enabled);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_request_show_popover(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_request_hide_popover(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_request_toggle_popover(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_show_popover(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_hide_popover(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_toggle_popover(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_set_base_path(System.IntPtr doc, byte* path);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_missing_assets(System.IntPtr doc, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_css_diagnostics(System.IntPtr doc, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_html_diagnostics(System.IntPtr doc, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_changed_elements(System.IntPtr doc, weva_element_change* @out, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong weva_document_structure_version(System.IntPtr doc);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_font_faces(System.IntPtr doc, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_document_layout_dump(System.IntPtr doc, byte* source, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint weva_element_parent(System.IntPtr doc, uint element);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_children(System.IntPtr doc, uint element, uint* @out, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_box_model(System.IntPtr doc, uint element, double* @out);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_matched_rules(System.IntPtr doc, uint element, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_computed_style_all(System.IntPtr doc, uint element, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_document_set_asset_reader(System.IntPtr doc, delegate* unmanaged[Cdecl]<void*, byte*, byte*, nuint, nuint> reader, void* user_data);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_computed_style(System.IntPtr doc, uint element, byte* property, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_model_path(System.IntPtr doc, uint element, byte* path, byte* buffer, nuint capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_row(System.IntPtr doc, uint element, int* out_index, byte* key_buffer, nuint key_capacity);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int weva_element_has_attribute(System.IntPtr doc, uint element, byte* name);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern nuint weva_element_text(System.IntPtr doc, uint element, byte* buffer, nuint capacity);
